ДЗ спринт №5, версия №2